--- a/src/main/resources/com/example/javafxSEP/App.fxml
+++ b/src/main/resources/com/example/javafxSEP/App.fxml
@@ -13,64 +13,61 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.AppController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="732.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.AppController">
     <children>
-        <Button layoutX="430.0" layoutY="25.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="160.0" text="Ongoing projects" />
-        <Button layoutX="612.0" layoutY="25.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="160.0" text="Completed projects" />
-        <ImageView fitHeight="41.0" fitWidth="200.0" layoutX="26.0" layoutY="22.0">
+        <Button fx:id="completedSort" layoutX="565.0" layoutY="17.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="149.0" text="Completed projects" />
+        <ImageView fitHeight="41.0" fitWidth="200.0" layoutX="21.0" layoutY="14.0">
             <image>
                 <Image url="@../../../Images/bobfx.png" />
             </image>
         </ImageView>
-        <Label alignment="CENTER" layoutX="52.0" layoutY="89.0" prefHeight="17.0" prefWidth="96.0" text="Search function">
+        <Label alignment="CENTER" layoutX="58.0" layoutY="129.0" prefHeight="19.0" prefWidth="113.0" text="Search function:">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <TextField layoutX="39.0" layoutY="126.0" promptText="search by name or char" />
-        <Button layoutX="188.0" layoutY="126.0" mnemonicParsing="false" text="Search" />
-        <Line endX="700.0" fill="BLACK" layoutX="100.0" layoutY="74.0" startX="-100.0" />
+        <TextField layoutX="182.0" layoutY="126.0" promptText="search by name or char" />
+        <Line endX="632.0" fill="BLACK" layoutX="100.0" layoutY="74.0" startX="-100.0" />
 
-        <Button layoutX="372.0" layoutY="86.0" mnemonicParsing="false" text="Residential" />
-        <Button layoutX="459.0" layoutY="86.0" mnemonicParsing="false" text="Commercial" />
-        <Button layoutX="557.0" layoutY="86.0" mnemonicParsing="false" text="Industrial" />
-        <Button layoutX="637.0" layoutY="86.0" mnemonicParsing="false" text="Road construction" />
+        <Button fx:id="residentialSort" layoutX="182.0" layoutY="86.0" mnemonicParsing="false" text="Residential" />
+        <Button fx:id="commercialSort" layoutX="280.0" layoutY="86.0" mnemonicParsing="false" text="Commercial" />
+        <Button fx:id="industrialSort" layoutX="383.0" layoutY="86.0" mnemonicParsing="false" text="Industrial" />
+        <Button fx:id="roadConstructionSort" layoutX="483.0" layoutY="86.0" mnemonicParsing="false" text="Road construction" />
+        <Button fx:id="showAllSort" layoutX="625.0" layoutY="86.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Show all" />
 
-        <Label alignment="CENTER" layoutX="265.0" layoutY="89.0" prefHeight="17.0" prefWidth="96.0" text="Project types:">
+        <Label alignment="CENTER" layoutX="30.0" layoutY="89.0" prefHeight="19.0" prefWidth="141.0" text="Sort by project types:">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-
-        <Button layoutX="653.0" layoutY="126.0" mnemonicParsing="false" text="Search" />
-        <TextField layoutX="593.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="1000000" />
-        <TextField layoutX="499.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="0" />
-        <Label alignment="CENTER" layoutX="568.0" layoutY="129.0" prefHeight="19.0" prefWidth="22.0" text="to">
+        <TextField layoutX="542.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="1000000" />
+        <TextField layoutX="448.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="0" />
+        <Label alignment="CENTER" layoutX="517.0" layoutY="129.0" prefHeight="19.0" prefWidth="22.0" text="to">
             <font>
                 <Font size="13.0" />
             </font>
         </Label>
-        <Label alignment="CENTER" layoutX="395.0" layoutY="129.0" prefHeight="19.0" prefWidth="103.0" text="search by price:">
+        <Label alignment="CENTER" layoutX="344.0" layoutY="129.0" prefHeight="19.0" prefWidth="103.0" text="search by price:">
             <font>
                 <Font size="13.0" />
             </font>
         </Label>
-        <AnchorPane layoutX="1.0" layoutY="173.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="377.0" prefWidth="800.0">
+        <AnchorPane layoutX="1.0" layoutY="173.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="377.0" prefWidth="726.0">
             <children>
-                <TableView fx:id="projectList" layoutX="5.0" prefHeight="369.0" prefWidth="792.0">
+                <TableView fx:id="projectList" layoutX="5.0" prefHeight="369.0" prefWidth="720.0">
                     <columns>
-                        <TableColumn fx:id="nameCol" prefWidth="134.0" text="Project name" />
-                        <TableColumn fx:id="projectTypeCol" prefWidth="136.0" text="Project type" />
-                        <TableColumn fx:id="priceCol" prefWidth="139.0" text="Price in $" />
-                        <TableColumn fx:id="hoursSpentCol" prefWidth="82.0" text="Hours Spent" />
-                        <TableColumn fx:id="timelineCol" prefWidth="84.0" text="Timeline" />
-                        <TableColumn fx:id="completedCol" prefWidth="76.0" text="Completed" />
+                        <TableColumn fx:id="nameCol" prefWidth="193.0" text="Project name" />
+                        <TableColumn fx:id="projectTypeCol" prefWidth="139.0" text="Project type" />
+                        <TableColumn fx:id="priceCol" prefWidth="136.0" text="Price in $" />
+                        <TableColumn fx:id="hoursSpentCol" prefWidth="87.0" text="Hours Spent" />
+                        <TableColumn fx:id="timelineCol" prefWidth="78.0" text="Timeline" />
+                        <TableColumn fx:id="completedCol" prefWidth="87.0" text="Completed" />
                     </columns>
                 </TableView>
             </children>
         </AnchorPane>
-        <Button fx:id="deleteButton" layoutX="724.0" layoutY="126.0" mnemonicParsing="false" onAction="#deleteData" text="Delete" />
-        <MenuButton fx:id="addNewProject" layoutX="265.0" layoutY="25.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="127.0" text="Add new Project">
+        <Button fx:id="deleteButton" layoutX="640.0" layoutY="126.0" mnemonicParsing="false" onAction="#deleteData" text="Delete" />
+        <MenuButton fx:id="addNewProject" layoutX="245.0" layoutY="17.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="127.0" text="Add new Project">
             <items>
                 <MenuItem fx:id="addResidential" mnemonicParsing="false" text="Residential" />
                 <MenuItem fx:id="addCommercial" mnemonicParsing="false" text="Commercial" />
@@ -78,5 +75,6 @@
                 <MenuItem fx:id="addRoadConstruction" mnemonicParsing="false" text="Road Construction" />
             </items>
         </MenuButton>
+      <Button fx:id="ongoingSort" layoutX="398.0" layoutY="17.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="149.0" text="Ongoing projects" />
     </children>
 </AnchorPane>
