--- a/src/main/resources/com/example/javafxSEP/App.fxml
+++ b/src/main/resources/com/example/javafxSEP/App.fxml
@@ -26,7 +26,7 @@
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <TextField layoutX="182.0" layoutY="126.0" promptText="search by name or char" />
+        <TextField fx:id="searchField" layoutX="182.0" layoutY="126.0" promptText="Search by project name" />
         <Line endX="632.0" fill="BLACK" layoutX="100.0" layoutY="74.0" startX="-100.0" />
 
         <Button fx:id="residentialSort" layoutX="182.0" layoutY="86.0" mnemonicParsing="false" text="Residential" />
@@ -40,8 +40,8 @@
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <TextField layoutX="542.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="1000000" />
-        <TextField layoutX="448.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="0" />
+        <TextField fx:id="maxPriceField" layoutX="542.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="Max. price" />
+        <TextField fx:id="minPriceField" layoutX="448.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="Min. price" />
         <Label alignment="CENTER" layoutX="517.0" layoutY="129.0" prefHeight="19.0" prefWidth="22.0" text="to">
             <font>
                 <Font size="13.0" />
