--- a/src/main/resources/com/example/javafxSEP/ViewIndustrial.fxml
+++ b/src/main/resources/com/example/javafxSEP/ViewIndustrial.fxml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.ViewCommercial">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.ViewIndustrial">
    <children>
       <TextField fx:id="projectNameField" layoutX="35.0" layoutY="79.0" />
       <TextField fx:id="priceField" layoutX="35.0" layoutY="139.0" />
-      <TextField fx:id="floorsField" layoutX="215.0" layoutY="139.0" />
       <TextField fx:id="timelineField" layoutX="35.0" layoutY="199.0" />
-      <TextField fx:id="buildingUsageField" layoutX="215.0" layoutY="199.0" promptText="e.g office space or retail" />
+      <TextField fx:id="facilityUsageField" layoutX="215.0" layoutY="199.0" promptText="e.g manufacturing plant" />
       <TextField fx:id="hoursSpentField" layoutX="35.0" layoutY="259.0" />
-      <Button fx:id="editButton" layoutX="133.0" layoutY="309.0" mnemonicParsing="false" text="Edit" />
+      <Button fx:id="editButton" layoutX="133.0" layoutY="309.0" mnemonicParsing="false"  text="Edit" />
       <Button fx:id="cancelButton" layoutX="215.0" layoutY="309.0" mnemonicParsing="false" onAction="#cancelButtonOnAction" text="Cancel" />
-      <TextField fx:id="projectSizeField" layoutX="216.0" layoutY="259.0" />
-      <Label fx:id="projectTypeLabel" layoutX="143.0" layoutY="21.0" text="Commercial project">
+      <TextField fx:id="facilitySizeField" layoutX="215.0" layoutY="139.0" />
+      <Label fx:id="projectTypeLabel" layoutX="147.0" layoutY="22.0" text="Industrial project">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -25,9 +27,8 @@
       <Label layoutX="42.0" layoutY="115.0" prefHeight="17.0" prefWidth="135.0" text="Price in dollars" />
       <Label layoutX="42.0" layoutY="175.0" prefHeight="17.0" prefWidth="135.0" text="Timeline in months" />
       <Label layoutX="42.0" layoutY="235.0" prefHeight="17.0" prefWidth="135.0" text="Hours spent" />
-      <Label layoutX="222.0" layoutY="235.0" prefHeight="17.0" prefWidth="135.0" text="Project size" />
+      <Label layoutX="221.0" layoutY="115.0" prefHeight="17.0" prefWidth="135.0" text="Facility size" />
       <Label layoutX="222.0" layoutY="56.0" prefHeight="17.0" prefWidth="135.0" text="Completed" />
-      <Label layoutX="222.0" layoutY="115.0" prefHeight="17.0" prefWidth="135.0" text="Floors" />
-      <Label layoutX="222.0" layoutY="175.0" prefHeight="17.0" prefWidth="135.0" text="Building usage" />
+      <Label layoutX="222.0" layoutY="175.0" prefHeight="17.0" prefWidth="135.0" text="Facility usage" />
    </children>
 </AnchorPane>
