--- a/src/main/resources/com/example/javafxSEP/ViewRoadConstruction.fxml
+++ b/src/main/resources/com/example/javafxSEP/ViewRoadConstruction.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.RoadConstructionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.ViewRoadConstruction">
    <children>
       <TextField fx:id="projectNameField" layoutX="35.0" layoutY="79.0" />
       <TextField fx:id="priceField" layoutX="35.0" layoutY="139.0" />
@@ -15,7 +15,7 @@
       <TextField fx:id="timelineField" layoutX="35.0" layoutY="199.0" />
       <TextField fx:id="widthField" layoutX="215.0" layoutY="199.0" />
       <TextField fx:id="hoursSpentField" layoutX="35.0" layoutY="259.0" />
-      <Button fx:id="createButton" layoutX="133.0" layoutY="425.0" mnemonicParsing="false" onAction="#createButtonOnAction" text="Create" />
+      <Button fx:id="editButton" layoutX="133.0" layoutY="425.0" mnemonicParsing="false"  text="edit" />
       <Button fx:id="cancelButton" layoutX="215.0" layoutY="425.0" mnemonicParsing="false" onAction="#cancelButtonOnAction" text="Cancel" />
       <TextField fx:id="bridgesField" layoutX="216.0" layoutY="259.0" />
       <Label fx:id="projectTypeLabel" layoutX="124.0" layoutY="22.0" text="Road Construction project">
