--- a/src/main/resources/com/example/javafxSEP/ViewCommercial.fxml
+++ b/src/main/resources/com/example/javafxSEP/ViewCommercial.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.ViewCommercial">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.ViewCommercial">
    <children>
       <TextField fx:id="projectNameField" layoutX="35.0" layoutY="79.0" />
       <TextField fx:id="priceField" layoutX="35.0" layoutY="139.0" />
@@ -29,5 +32,10 @@
       <Label layoutX="222.0" layoutY="56.0" prefHeight="17.0" prefWidth="135.0" text="Completed" />
       <Label layoutX="222.0" layoutY="115.0" prefHeight="17.0" prefWidth="135.0" text="Floors" />
       <Label layoutX="222.0" layoutY="175.0" prefHeight="17.0" prefWidth="135.0" text="Building usage" />
+      <Label fx:id="exceptionLabel" alignment="CENTER" layoutX="47.0" layoutY="350.0" prefHeight="25.0" prefWidth="306.0" textFill="RED">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
