--- a/src/main/resources/com/example/javafxSEP/addRoadConstruction.fxml
+++ b/src/main/resources/com/example/javafxSEP/addRoadConstruction.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.RoadConstructionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.RoadConstructionController">
    <children>
       <TextField fx:id="projectNameField" layoutX="35.0" layoutY="79.0" />
       <TextField fx:id="priceField" layoutX="35.0" layoutY="139.0" />
@@ -38,6 +38,11 @@
       <TextField fx:id="tunnelsField" layoutX="216.0" layoutY="322.0" />
       <Label layoutX="222.0" layoutY="298.0" prefHeight="17.0" prefWidth="135.0" text="Tunnels" />
       <ChoiceBox fx:id="choiceBoxTrueFalse" layoutX="216.0" layoutY="79.0" prefWidth="150.0" />
+      <Label fx:id="exceptionLabel" alignment="CENTER" layoutX="52.0" layoutY="458.0" prefHeight="25.0" prefWidth="306.0" textFill="RED">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
      
    </children>
 </AnchorPane>
