--- a/VIA_WEB1_Assignment2_Gruppe6/CSS/main.css
+++ b/VIA_WEB1_Assignment2_Gruppe6/CSS/main.css
@@ -21,6 +21,15 @@ html {
   min-height: 100%;
 }
 
+.table-container {
+  display: flex;
+  justify-content: center;
+}
+
+.table {
+  width: 90%;
+}
+
 /*General CSS styling */
 
 .hideElement {
