--- a/src/main/resources/com/example/javafxSEP/addRoadConstruction.fxml
+++ b/src/main/resources/com/example/javafxSEP/addRoadConstruction.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.RoadConstructionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxSEP.RoadConstructionController">
    <children>
       <TextField fx:id="projectNameField" layoutX="35.0" layoutY="79.0" />
       <TextField fx:id="priceField" layoutX="35.0" layoutY="139.0" />
@@ -28,8 +28,8 @@
       <Label layoutX="42.0" layoutY="175.0" prefHeight="17.0" prefWidth="135.0" text="Timeline in months" />
       <Label layoutX="42.0" layoutY="235.0" prefHeight="17.0" prefWidth="135.0" text="Hours spent" />
       <Label layoutX="222.0" layoutY="235.0" prefHeight="17.0" prefWidth="135.0" text="Bridges" />
-      <Label layoutX="222.0" layoutY="115.0" prefHeight="17.0" prefWidth="135.0" text="Length of road" />
-      <Label layoutX="222.0" layoutY="175.0" prefHeight="17.0" prefWidth="135.0" text="width of road" />
+      <Label layoutX="222.0" layoutY="115.0" prefHeight="17.0" prefWidth="143.0" text="Length of road in metres" />
+      <Label layoutX="222.0" layoutY="175.0" prefHeight="17.0" prefWidth="135.0" text="width of road in metres" />
       <Label layoutX="223.0" layoutY="55.0" prefHeight="17.0" prefWidth="135.0" text="Completed" />
       <TextField fx:id="environmentalField" layoutX="35.0" layoutY="322.0" />
       <TextField fx:id="geographicalField" layoutX="35.0" layoutY="381.0" />
