Added a default image

--- a/VIA_WEB1_Assignment2_Gruppe6/CSS/main.css
+++ b/VIA_WEB1_Assignment2_Gruppe6/CSS/main.css
@@ -30,6 +30,12 @@ html {
   width: 90%;
 }
 
+.error-container {
+  display: none;
+  text-align: center;
+  margin: 50px 0;
+}
+
 /*General CSS styling */
 
 .hideElement {
